# universe_cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imgui.ini  make.sh
src/: colors.hpp  constants.hpp  main.cpp
src/model/: model.cpp  model.hpp
src/mui/: mui.cpp  mui.hpp
src/universe/: fast_rand.cpp  fast_rand.hpp  generator.cpp  generator.hpp
